<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainNavigation"
    app:startDestination="@id/directoryFragment"
    >

    <fragment
        android:id="@+id/directoryFragment"
        android:name="org.jdc.template.ux.directory.DirectoryFragment"
        android:label="@string/directory"
        >
        <action
            android:id="@+id/action_to_individualFragment"
            app:destination="@id/individualFragment"
            />
        <action
            android:id="@+id/action_to_individualEditFragment"
            app:destination="@id/individualEditFragment"
            />
    </fragment>
    <fragment
        android:id="@+id/individualFragment"
        android:name="org.jdc.template.ux.individual.IndividualFragment"
        android:label="@string/individual"
        >
        <action
            android:id="@+id/action_to_individualEditFragment"
            app:destination="@id/individualEditFragment"
            />
        <argument
            android:name="individualId"
            app:argType="string"
            />
    </fragment>
    <fragment
        android:id="@+id/individualEditFragment"
        android:name="org.jdc.template.ux.individualedit.IndividualEditFragment"
        android:label="@string/edit_individual"
        >
        <argument
            android:name="individualId"
            app:nullable="true"
            android:defaultValue="@null"
            app:argType="string"
            />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="org.jdc.template.ux.settings.SettingsFragment"
        android:label="@string/settings"
        >
        <action
            android:id="@+id/action_to_workManagerFragment"
            app:destination="@id/workManagerFragment"
            />
    </fragment>
    <fragment
        android:id="@+id/workManagerFragment"
        android:name="org.dbtools.android.work.ux.monitor.WorkManagerStatusFragment"
        android:label="Work Manager Status"
        >
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="org.jdc.template.ux.about.AboutFragment"
        android:label="@string/about"
        >
        <action
            android:id="@+id/action_to_acknowledgmentsFragment"
            app:destination="@id/acknowledgementsFragment"
            />
    </fragment>
    <action
        android:id="@+id/action_global_settingsFragment"
        app:destination="@id/settingsFragment"
        />
    <action
        android:id="@+id/action_global_aboutFragment"
        app:destination="@id/aboutFragment"
        />
    <fragment
        android:id="@+id/acknowledgementsFragment"
        android:name="org.jdc.template.ux.acknowledgement.AcknowledgmentsFragment"
        android:label="@string/acknowledgments"
        />
</navigation>