<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable
            name="viewModel"
            type="org.jdc.template.ux.individualedit.IndividualEditViewModel"
            />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstNameEditText"
                    style="@style/DefaultTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:text="@={viewModel.firstName}"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/firstNameLayout"
                app:layout_constraintStart_toStartOf="@+id/firstNameLayout"
                app:layout_constraintTop_toBottomOf="@+id/firstNameLayout"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastNameEditText"
                    style="@style/DefaultTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:text="@={viewModel.lastName}"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/lastNameLayout"
                app:layout_constraintStart_toStartOf="@+id/lastNameLayout"
                app:layout_constraintTop_toBottomOf="@+id/lastNameLayout"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneEditText"
                    style="@style/DefaultTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:text="@={viewModel.phone}"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/phoneLayout"
                app:layout_constraintStart_toStartOf="@+id/phoneLayout"
                app:layout_constraintTop_toBottomOf="@+id/phoneLayout"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    style="@style/DefaultTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.email}"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birthDateLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/emailLayout"
                app:layout_constraintStart_toStartOf="@+id/emailLayout"
                app:layout_constraintTop_toBottomOf="@+id/emailLayout"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/birthDateEditText"
                    style="@style/DefaultTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/birth_date"
                    android:onClick="@{() -> viewModel.onBirthDateClicked()}"
                    app:textDate="@{viewModel.birthDate}"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/alarmTimeLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/birthDateLayout"
                app:layout_constraintStart_toStartOf="@+id/birthDateLayout"
                app:layout_constraintTop_toBottomOf="@+id/birthDateLayout"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/alarmTimeEditText"
                    style="@style/DefaultTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/alarm_time"
                    android:onClick="@{() -> viewModel.onAlarmTimeClicked()}"
                    app:textTime="@{viewModel.alarmTime}"
                    />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>