<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="individual"
            type="org.jdc.template.model.db.main.individual.Individual"
            />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:text="@{individual.getFullName()}"
                android:textAppearance="?textAppearanceHeadline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Jeff Campbell"
                />

            <TextView
                android:id="@+id/phoneLabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/phone"
                android:textAppearance="?textAppearanceCaption"
                app:layout_constraintStart_toStartOf="@+id/nameTextView"
                app:layout_constraintTop_toBottomOf="@+id/nameTextView"
                />

            <TextView
                android:id="@+id/phoneTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@{individual.phone}"
                android:textAppearance="?textAppearanceBody1"
                app:layout_constraintStart_toStartOf="@+id/phoneLabelTextView"
                app:layout_constraintTop_toBottomOf="@+id/phoneLabelTextView"
                tools:text="801-555-1234"
                />

            <TextView
                android:id="@+id/emailLabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/email"
                android:textAppearance="?textAppearanceCaption"
                app:layout_constraintStart_toStartOf="@+id/phoneTextView"
                app:layout_constraintTop_toBottomOf="@+id/phoneTextView"
                />

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@{individual.email}"
                android:textAppearance="?textAppearanceBody1"
                app:layout_constraintStart_toStartOf="@+id/emailLabelTextView"
                app:layout_constraintTop_toBottomOf="@+id/emailLabelTextView"
                tools:text="bob@bob.com"
                />

            <TextView
                android:id="@+id/birthDateLabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/birth_date"
                android:textAppearance="?textAppearanceCaption"
                app:layout_constraintStart_toStartOf="@+id/emailTextView"
                app:layout_constraintTop_toBottomOf="@+id/emailTextView"
                />

            <TextView
                android:id="@+id/birthDateTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textAppearance="?textAppearanceBody1"
                app:layout_constraintStart_toStartOf="@+id/birthDateLabelTextView"
                app:layout_constraintTop_toBottomOf="@+id/birthDateLabelTextView"
                app:textDate="@{individual.birthDate}"
                tools:text="1/1/70"
                />


            <TextView
                android:id="@+id/alarmTimeLabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/alarm_time"
                android:textAppearance="?textAppearanceCaption"
                app:layout_constraintStart_toStartOf="@+id/birthDateTextView"
                app:layout_constraintTop_toBottomOf="@+id/birthDateTextView"
                />

            <TextView
                android:id="@+id/alarmTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textAppearance="?textAppearanceBody1"
                app:layout_constraintStart_toStartOf="@+id/alarmTimeLabelTextView"
                app:layout_constraintTop_toBottomOf="@+id/alarmTimeLabelTextView"
                app:textTime="@{individual.alarmTime}"
                tools:layout_conversion_absoluteHeight="24dp"
                tools:layout_conversion_absoluteWidth="84dp"
                tools:layout_conversion_absoluteX="10dp"
                tools:layout_conversion_absoluteY="151dp"
                tools:text="12:00 PM"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>